<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Birthday</string>
  
    <string name="title_name_preference">Name</string>
    <string name="summary_name_preference">Whose birthday</string>    
    <string name="dialog_title_name_preference">Input the name</string>    
    <string name="title_remind_time_preference">Remind time</string>
    <string name="dialog_title_remind_time_preference">Set remind time</string>    
    <string name="summary_time_preference">12:00</string>
    
    <string name="title_date_preference">Birthday</string>
    <string name="summary_date_preference">06&#8211;08</string>
    <string name="dialog_title_date_preference">Set birthday</string>
    
    <string name="title_lunar_preference">Lunar</string>
    <string name="summary_lunar_checkbox_preference">Is lunar birthday</string>
    
    <string name="title_repeat_preference">Repeat</string>
    <string name="summary_repeat_preference">10</string>
    <string name="dialog_title_repeat_preference">Set repeat years</string>
    
    <string name="title_early_checkbox_preference">Remind early</string>
    <string name="summary_early_checkbox_preference">Remind on the day before birthday</string>
    
    
    <string name="title_method_preference">Remind method</string>
    <string name="summary_method_preference">Select remind method</string>
    <string name="dialog_title_method_preference">Remind method</string>
    
    <string name="pref_upload_buckets_image">upload.buckets_image</string>
    
    <string name="email">Email</string>
    
    <string name="inline_preferences">Happy birthday</string>
    
    <string name="birthdays_title">Birthday</string>
    
    <string name="new_birthday">NEW BIRTHDAY</string>
    <string name="delete_birthday">Delete Birthday</string>
    <string name="lunar">Lunar</string>
    <string name="solar">Solar</string>
    
    <string name="error">Error</string>
    <string name="error_format">[Error] %s</string>
    
    <string name="icon_desc">Application icon</string>
    <string name="title_separator_desc">Title separator</string>
    
    <string name="description_add">Add Calendar</string>
    
    <string name="event_summary">\'s Birthday</string>
    
    <string name="tomorrow">Tomorrow is&#160;</string>
    <string name="days_left">&#160;days before</string>
    <string name="age">&#160;%d years</string>
    
    <string name="confirm_for_delete">Delete the birthday</string>
    <string name="delete_alert_msg">After delete the birthday on google calendar, the birthday will be deleted.Are you sure to delete</string>
    <string name="alert_yes_delete">Delete</string>
    <string name="alert_no_cancel">Cancel</string>
    
    <string name="wait_for_delete_finish">Waiting for delete complete</string>
    <string name="wait_for_sync_finish">Waiting for sync complete</string>
    <string name="delete_now">Deleting on google calendar, please wait</string>   
    <string name="today">Today</string>   
    <string name="about">ABOUT</string>
    
    <string name="select_items">%1$d items selected</string>
    
    <string name="about_page">file:///android_asset/pages/about-en.html</string>
    <string name="about_info_title">Birthday %s</string>
    <string name="about_info_share">Share</string>
    <string name="share_content">
        Birthday is used to sync chinese lunar birthday to google calendar, because google calendar cannot set recurring events by lunar date. Please try it https://play.google.com/store/apps/details?id=io.github.scola.birthday
    </string>
    <string name="share_subject">Invite to use Birthday app for google calendar</string>
    <string name="share_channel">Share via</string>
    <string name="about_info_close">Close</string>
    
</resources>
